<?xml version="1.0" encoding="utf-8"?>
<!-- Main Activity layout using CoordinatorLayout to support Material Design -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <!-- AppBarLayout containing the MaterialToolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <!-- MaterialToolbar with centered title -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#4E4C4C"
            android:title="@string/app_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#4E4C4C" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main content layout placed below the AppBar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="#FDFDFD"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- START Button with custom grey rounded background -->



        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:background="@drawable/button_background"
            android:text="@string/startbutton"
            android:textColor="#686464"
            android:textColorLink="#646363"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />
        <!-- TextView prompting user to enter their name -->
        <TextView
            android:id="@+id/askname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name"
            android:textColorLink="#5F5D5D"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <!-- Input field for the user name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/GetName"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:outlineProvider="bounds"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.359" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
